tpl/default/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
  namespace: ${PROFILE}
spec:
  selector:
    matchLabels:
      app: ${APP_NAME}
  replicas: 1
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      containers:
        - name: ${APP_NAME}
          image: ${REGISTRY_GROUP}/${PROFILE}/${APP_NAME}:${APP_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: ${APP_PORT}
          volumeMounts:
            - mountPath: /data/java/logs/
              name: cache-volume
      imagePullSecrets:
        - name: harbor-secret
      volumes:
        - name: cache-volume
          emptyDir: {}
