tpl/default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  namespace: ${PROFILE}
spec:
  ports:
    - port: 80
      targetPort: ${APP_PORT}
      protocol: TCP
  type: NodePort
  selector:
    app: ${APP_NAME}
