tpl/default/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}-ingress
  namespace: ${PROFILE}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: yj2025-secret
      hosts:
        - dev.yj2025.com
  rules:
    - host: dev.yj2025.com
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-service
              servicePort: 80
